--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
@@ -108,7 +108,6 @@
 			protected function sparkskin1_creationCompleteHandler(event:FlexEvent):void
 			{
 				doubleClickEnabled = true;
-				addEventListener( MouseEvent.DOUBLE_CLICK, hideButton_clickHandler, true, 0 , true );
 				BindingUtils.bindProperty( this, "data", hostComponent, "data", true );
 			}
 
@@ -164,7 +163,7 @@
 				  gap="1">
 
 			<s:Group id="headerGroup"
-					 height="28" width="100%">
+					 height="28" width="100%" doubleClick="hideButton_clickHandler(event)">
 
 				<s:Rect bottom="0" left="0" right="0" top="0">
 
