add popUpWindow for edit action parametrs
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7516 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/LabelItemRenderers.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/LabelItemRenderers.mxml
@@ -8,8 +8,8 @@
 		<![CDATA[
 			import mx.controls.dataGridClasses.DataGridListData;
 			
-			import net.vdombox.ide.modules.dataBase.events.StringAttributeEditWindowEvent;
-			import net.vdombox.ide.modules.dataBase.view.components.windows.StringAttributeEditWindow;
+			import net.vdombox.ide.common.events.StringAttributeEditWindowEvent;
+			import net.vdombox.components.StringAttributeEditWindow;
 			import net.vdombox.utils.WindowManager;
 			
 			import spark.events.TextOperationEvent;
