--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/TextInputItemRenderers.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/TextInputItemRenderers.mxml
@@ -12,8 +12,8 @@
 			import mx.controls.dataGridClasses.DataGridListData;
 			import mx.events.DataGridEvent;
 			
-			import net.vdombox.ide.modules.dataBase.events.StringAttributeEditWindowEvent;
-			import net.vdombox.ide.modules.dataBase.view.components.windows.StringAttributeEditWindow;
+			import net.vdombox.ide.common.events.StringAttributeEditWindowEvent;
+			import net.vdombox.components.StringAttributeEditWindow;
 			import net.vdombox.utils.WindowManager;
 			
 			import spark.components.RichEditableText;
