--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Question.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Question.mxml
@@ -6,17 +6,18 @@
 				defaultButton="{btnOk}">
 	<mx:Script>
 		<![CDATA[
-		import mx.containers.HBox;
-		import mx.containers.VBox;
-		import mx.controls.RadioButton;
-		import mx.controls.TextArea;
-		import mx.controls.TextInput;
-		import mx.core.Application;
-		import mx.events.CloseEvent;
-		import mx.managers.PopUpManager;
-		import mx.utils.StringUtil;
-
-		import net.vdombox.powerpack.managers.LanguageManager;
+			import mx.containers.HBox;
+			import mx.containers.VBox;
+			import mx.controls.Label;
+			import mx.controls.RadioButton;
+			import mx.controls.TextArea;
+			import mx.controls.TextInput;
+			import mx.core.Application;
+			import mx.events.CloseEvent;
+			import mx.managers.PopUpManager;
+			import mx.utils.StringUtil;
+			
+			import net.vdombox.powerpack.managers.LanguageManager;
 
 		public static const QM_QUESTION : int = 1;
 		public static const QM_CHOICE : int = 2;
@@ -32,7 +33,7 @@
 		static private function classConstruct() : Boolean
 		{
 			LanguageManager.setSentences( defaultCaptions );
-			return true
+			return true;
 		}
 
 		public var mode : int;
@@ -43,8 +44,8 @@
 		public var strAnswer : String;
 		public var strFilter : String;
 
-		private var txtAnswer : TextArea;
-		private var txtInput : TextInput;
+		private var answerTextInput		: TextArea;
+		private var filePathTextInput	: TextInput;
 
 		private var fCloseHandler : Function;
 
@@ -52,17 +53,17 @@
 
 		private function show() : void
 		{
-			btnOk.addEventListener( MouseEvent.CLICK, clickHandler );
-			addEventListener( KeyboardEvent.KEY_DOWN, keyDownHandler );
+			btnOk.addEventListener( MouseEvent.CLICK, okClickHandler );
+
 			btnOk.setFocus();
 
 			txtQuestion.text = strQuestion;
 			title = strTitle;
 
 			if ( mode == QM_QUESTION )
-				txtAnswer.setFocus();
+				answerTextInput.setFocus();
 			else if ( mode == QM_BROWSE )
-				txtInput.setFocus();
+				btnOk
 
 			addEventListener( CloseEvent.CLOSE, onClosing );
 
@@ -99,12 +100,11 @@
 			{
 				if ( mode == QM_QUESTION )
 				{
-					txtAnswer = new TextArea();
-					txtAnswer.percentWidth = 100;
-					txtAnswer.percentHeight = 100;
-					cnvsAnswer.addChild( txtAnswer );
-					txtAnswer.addEventListener( KeyboardEvent.KEY_DOWN, onTxtAreaKeyDown );
-					txtAnswer.addEventListener( TextEvent.TEXT_INPUT, onTextInput );
+					answerTextInput = new TextArea();
+					answerTextInput.percentWidth = 100;
+					answerTextInput.percentHeight = 100;
+					cnvsAnswer.addChild( answerTextInput );
+					answerTextInput.addEventListener( TextEvent.TEXT_INPUT, onTextInput );
 
 					btnOk.enabled = false;
 				}
@@ -135,10 +135,6 @@
 					hBox.setStyle( 'horizontalGap', 4 );
 					cnvsAnswer.addChild( hBox );
 
-					txtInput = new TextInput();
-					txtInput.percentWidth = 100;
-					hBox.addChild( txtInput );
-
 					var btnBrowse : Button = new Button();
 					btnBrowse.setStyle( 'paddingLeft', 2 );
 					btnBrowse.setStyle( 'paddingRight', 2 );
@@ -147,6 +143,19 @@
 					btnBrowse.label = LanguageManager.sentences.browse + "...";
 					btnBrowse.addEventListener( MouseEvent.CLICK, browseClickHandler );
 					hBox.addChild( btnBrowse );
+					
+					filePathTextInput = new TextInput();
+					filePathTextInput.setStyle( 'borderStyle', "none" );
+					filePathTextInput.setStyle( 'backgroundAlpha', 0.15 );
+					filePathTextInput.text = "";
+					filePathTextInput.enabled = false;
+					filePathTextInput.editable = false;
+					filePathTextInput.percentWidth = 100;
+					
+					
+					
+					hBox.addChild( filePathTextInput );
+
 				}
 			}
 		}
@@ -180,18 +189,23 @@
 
 		private function closeDialog() : void
 		{
-			if ( txtAnswer || txtInput )
+			if ( answerTextInput || filePathTextInput )
 			{
-				var txtObj : Object = txtAnswer ? txtAnswer : txtInput;
+				var txtObj : Object = answerTextInput ? answerTextInput : filePathTextInput;
 				strAnswer = txtObj.text;
 
 				strAnswer = StringUtil.trim( strAnswer );
 
 				if ( strAnswer.length == 0 )
 				{
-					txtObj.setFocus();
-					txtObj.setSelection( 0, txtObj.length );
 					strAnswer = null;
+					
+					if (txtObj is TextInput)
+					{
+						txtObj.setFocus();
+						txtObj.setSelection( 0, txtObj.length );
+					}
+					
 					return;
 				}
 			}
@@ -228,29 +242,9 @@
 			PopUpManager.removePopUp( this );
 		}
 
-		private function onTxtAreaKeyDown( event : KeyboardEvent ) : void
-		{
-			if ( event.keyCode == Keyboard.ENTER )
-			{
-				//	event.stopPropagation();
-			}
-		}
-
 		private function onTextInput( event : TextEvent ) : void
 		{
 			btnOk.enabled = event.target.text || event.text ? true : false;
-		}
-
-		override protected function keyDownHandler( event : KeyboardEvent ) : void
-		{
-			if ( event.keyCode == Keyboard.ENTER )
-			{
-				//closeDialog();
-			}
-			else if ( event.keyCode == Keyboard.ESCAPE )
-			{
-				//dispatchEvent(new CloseEvent(CloseEvent.CLOSE));
-			}
 		}
 
 		private function browseClickHandler( event : MouseEvent ) : void
@@ -261,20 +255,21 @@
 
 			var file : File = new File();
 
+			file.addEventListener( Event.SELECT, fileSelectHandler );
+			
 			if ( strFilter )
 				file.browseForOpen( LanguageManager.sentences.select_file + '...', [filter] );
 			else
-				file.browseForSave( LanguageManager.sentences.select_file + '...' );
-
-			file.addEventListener( Event.SELECT, fileSelectHandler );
+				file.browseForOpen( LanguageManager.sentences.select_file + '...' );
 		}
 
 		private function fileSelectHandler( event : Event ) : void
 		{
-			txtInput.text = event.target.nativePath;
+			filePathTextInput.text = event.target.nativePath;
+			filePathTextInput.toolTip = event.target.nativePath;
 		}
 
-		private function clickHandler( event : MouseEvent ) : void
+		private function okClickHandler( event : MouseEvent ) : void
 		{
 			closeDialog();
 		}
