--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -10,7 +10,7 @@
 		]]>
 	</fx:Script>
 
-	<components:ScriptEditor id="sriptEditor"
+	<components:WorkArea id="workArea"
 							 height="100%" width="100%"/>
 
 	<s:VGroup height="100%" width="250" gap="0">
@@ -33,7 +33,7 @@
 		<components:GlobalScriptsPanel id="globalScriptsPanel"
 								   width="100%" height="25%"
 								   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
-								   title="{ resourceManager.getString( 'Scripts_General', 'libraries_panel_title' ) }"/>
+								   title="{ resourceManager.getString( 'Scripts_General', 'global_scripts_panel_title' ) }"/>
 		
 	</s:VGroup>
 </s:HGroup>
