--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/GlobalScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/GlobalScriptsPanel.mxml
@@ -42,11 +42,17 @@
 			
 		]]>
 	</fx:Script>
-	
+	<s:Rect width="100%" height="100%">
+		<s:fill>
+			<s:BitmapFill source = "@Embed('icons/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+		</s:fill>
+	</s:Rect>
 	
 	<mx:Tree id="globalTree"
 			dataProvider="{ _actions }" 
 			labelField="@Name"  showRoot="true" 
+			contentBackgroundAlpha="0" borderVisible="false"
 			height="100%" width="100%" change="changeHandler(event)"
+			itemRenderer="net.vdombox.components.ObjectsTreePanelItemRenderer"
 			/>
 </s:Panel>
