--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -118,10 +118,17 @@
 			
 		]]>
 	</fx:Script>
+	
+	<s:Rect width="100%" height="100%">
+		<s:fill>
+			<s:BitmapFill source = "@Embed('icons/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+		</s:fill>
+	</s:Rect>
 
 	<s:List id="librariesList"
 			dataProvider="{ _libraries }" height="100%" labelField="name" width="100%"
 			itemRenderer="net.vdombox.ide.modules.scripts.view.components.ListItemRenderer"
+			contentBackgroundAlpha="0" borderVisible="false"
 			creationComplete="librariesList_creationCompleteHandler(event)"/>
 
 	<s:controlBarContent>
