git-svn-id: http://svn.vdombox.ru/flextools/trunk@7527 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/components/ObjectsTreePanelItemRenderer.mxml
+++ b/IDE/v.02/common/src/net/vdombox/components/ObjectsTreePanelItemRenderer.mxml
@@ -7,7 +7,7 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
-			private var dataChanged : Boolean = false;
+			//private var dataChanged : Boolean = false;
 			
 			private var _data : XML;
 			
@@ -15,7 +15,7 @@
 			{
 				super.data = value;
 				
-				dataChanged = true;
+				//dataChanged = true;
 				
 				_data = value as XML;
 			}
@@ -25,7 +25,7 @@
 				return _data.@id;
 			}
 			
-			override public function validateProperties() : void
+			/*override public function validateProperties() : void
 			{
 				super.validateProperties();
 				
@@ -36,7 +36,7 @@
 				
 				if ( !_data )
 					return;
-			}
+			}*/
 			
 		]]>
 	</fx:Script>
