--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
@@ -91,6 +91,11 @@
 //				if( isSelectedItemChanged )
 					//dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.SELECTED_SERVER_ACTION_CHANGED ) );
 			}
+			
+			public function set titleAndName( value : String ) : void
+			{
+				title = resourceManager.getString( 'Scripts_General', 'server_scripts_panel_title' ) + " " + value;
+			}
 
 			protected function actionList_changeHandler( event : ListItemRendererEvent ) : void
 			{
