--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -3,7 +3,7 @@
 		  xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/halo"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  height="100%" width="100%">
+		  height="100%" width="100%" xmlns:mx1="library://ns.adobe.com/flex/mx">
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.scripts.view.skins.PanelSkin;
@@ -12,8 +12,14 @@
 
 	<components:WorkArea id="workArea"
 							 height="100%" width="100%"/>
+	
+	<s:Rect width="8" height="100%">
+		<s:fill>
+			<s:SolidColor color="#424242"/>
+		</s:fill>
+	</s:Rect>
 
-	<s:VGroup height="100%" width="250" gap="0">
+	<mx1:VDividedBox height="100%" width="228" minWidth="200" dividerSkin="net.vdombox.view.skins.DividerSkin">
 
 		<components:ContainersPanel id="containersPanel"
 									width="100%" height="25%" 
@@ -35,5 +41,5 @@
 								   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
 								   title="{ resourceManager.getString( 'Scripts_General', 'global_scripts_panel_title' ) }"/>
 		
-	</s:VGroup>
+	</mx1:VDividedBox>
 </s:HGroup>
